Refactor and move towards Java11